# my-toolbox-3.0

./: .gitignore
.github/workflows/: build-csharp.yml  build-go.yml  build-mojo.yml  build-python.yml  build-rust.yml  build-zig.yml  build-zig.yml.bak
cpp-tools/_template/src/: main.cpp
cpp-tools/portable-run-cpp/: CMakeLists.txt
cpp-tools/portable-run-cpp/src/: main.cpp
cpp-tools/prime-generator-cpp/: CMakeLists.txt  main.cpp
csharp-tools/_template/: template_tool.csproj
csharp-tools/_template/src/: Program.cs
csharp-tools/prime-generator-csharp/src/: Program.cs
go-tools/_template/: go.mod
go-tools/_template/src/: main.go
go-tools/prime-generator-go/: go.mod
go-tools/prime-generator-go/src/: main.go
mojo-tools/_template/: pixi.toml
mojo-tools/mau/: pixi.toml
mojo-tools/mau/src/: main.mojo
my-toolbox/.github/workflows/: build-cpp.yml  build-rust.yml
python-tools/_template/: requirements.txt
python-tools/_template/src/: main.py
python-tools/prime-generator-go/src/: main.py
python-tools/prime-generator-python/src/: main.py
rust-tools/: Cargo.toml  build.zig.zon
rust-tools/_portabler_1.1/src/: main.rs
rust-tools/_template copy/: Cargo.toml
rust-tools/_template copy/src/: main.rs
rust-tools/portable_run/: Cargo.toml  build.rs
rust-tools/portable_run/src/: main.rs
rust-tools/portable_run_1.0/: Cargo.toml
rust-tools/portablerun_1.0/: Cargo.toml
rust-tools/portablerun_1.0/src/: main.rs
rust-tools/portablerun_1.1/: Cargo.toml
rust-tools/prime-generator-rust/: Cargo.toml
rust-tools/prime-generator-rust/src/: main.rs
zig-tools/_template/: build.zig  build.zig.zon
zig-tools/_template/src/: main.zig
zig-tools/portable_run/: build.zig  build.zig.bak
zig-tools/portable_run/src/: main.zig
zig-tools/prime-generator-zig/: build.zig  build.zig.zon
zig-tools/prime-generator-zig/src/: main.zig
